[package]
name = "marvel-explorer"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]

[dependencies]
dotenv = "0.11.0"
env_logger = "0.5.9"
futures = "0.1.0"
hyper = "0.11.25"
hyper-tls = "0.1.3"
log = "*"
prettytable-rs = "0.6.7"
rust-crypto = "0.2.36"
serde = "1.0.42"
serde_derive = "1.0.42"
serde_json = "1.0.16"
tokio-core = "0.1.17"
url = "1.7.0"
